feature: implement fixes from copilot review
(sry for this commit message, i'm ashamed)
