# src/main/java/de/ni0/chronoscope/controller/dto/request/InviteUserRequest.java
@@ -1,8 +1,9 @@
 package de.ni0.chronoscope.controller.dto.request;
 
 import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
 
 public record InviteUserRequest(
-        @Email String targetMail
+        @NotBlank @Email String targetMail
 ) {
 }
